# lfo_expression_pedal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
hw/kicad/lfo_expression_pedal/: fp-info-cache  lfo_expression_pedal.cmp  lfo_expression_pedal.kicad_pcb  lfo_expression_pedal.kicad_prl  lfo_expression_pedal.kicad_pro  lfo_expression_pedal.kicad_sch  lfo_expression_pedal.xml
hw/production/: lfo_expression_pedal.csv
hw/production/cpl/: lfo_expression_pedal-top-pos.csv
hw/production/gerbers/: lfo_expression_pedal-B_Cu.gbr  lfo_expression_pedal-B_Mask.gbr  lfo_expression_pedal-B_Paste.gbr  lfo_expression_pedal-B_Silkscreen.gbr  lfo_expression_pedal-Edge_Cuts.gbr  lfo_expression_pedal-F_Cu.gbr  lfo_expression_pedal-F_Mask.gbr  lfo_expression_pedal-F_Paste.gbr  lfo_expression_pedal-F_Silkscreen.gbr  lfo_expression_pedal-NPTH.drl  lfo_expression_pedal-PTH.drl  lfo_expression_pedal-job.gbrjob
sw/embedded/: STM32G071.svd  stm32.cmake
sw/embedded/inc/: main.hpp
sw/embedded/src/: STM32G071CBUX_FLASH.ld  main.cpp  stm32g0xx_it.c
sw/python/waveforms/: reverse_sawtooth.py  sawtooth.py  sinewave.py  squarewave.py  triangle.py
